--- a/conda/environments/all_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/all_cuda-121_arch-x86_64.yaml
@@ -12,40 +12,42 @@ dependencies:
 - anyio>=3.7
 - appdirs
 - arxiv=1.4
-- automake
+- automake=1.16.5
 - beautifulsoup4
 - benchmark=1.8.3
-- boost-cpp=1.84
 - boto3
 - breathe=4.35.0
 - ccache
 - clangdev=16
-- click >=8
+- click>=8
 - cmake=3.27
 - cuda-cudart-dev=12.1
-- cuda-nvcc
+- cuda-cudart=12.1
+- cuda-nvcc=12.1
 - cuda-nvml-dev=12.1
 - cuda-nvrtc-dev=12.1
+- cuda-nvrtc=12.1
 - cuda-nvtx-dev=12.1
+- cuda-nvtx=12.1
 - cuda-tools=12.1
 - cuda-version=12.1
 - cudf=24.02
 - cuml=24.02.*
+- cupy
 - cxx-compiler
 - cython=3.0
-- dask=2023.12.1
 - datacompy=0.10
 - dill=0.3.7
-- distributed=2023.12.1
+- docker-py=5.0
 - doxygen=1.9.2
 - elasticsearch==8.9.0
 - exhale=0.3.6
-- feedparser=6.0.10
+- feedparser=6.0
 - flake8
 - gcc_linux-64=11.2
 - git-lfs
 - glog=0.6
-- grpcio-status==1.59
+- grpcio-status=1.59
 - grpcio=1.59
 - gxx_linux-64=11.2
 - huggingface_hub=0.20.2
@@ -54,6 +56,7 @@ dependencies:
 - isort
 - jsonpatch>=1.33
 - kfp
+- libcudf=24.02
 - librdkafka>=1.9.2,<1.10.0a0
 - libtool
 - libwebp=1.3.2
@@ -76,7 +79,7 @@ dependencies:
 - pkg-config=0.29
 - pluggy=1.3
 - pre-commit
-- protobuf=4.24
+- pyarrow=*=*_cuda
 - pybind11-stubgen=0.10.5
 - pydantic
 - pylint=3.0.3
@@ -92,6 +95,7 @@ dependencies:
 - pytorch-cuda
 - pytorch=*=*cuda*
 - rapidjson=1.1.0
+- rapids-dask-dependency=24.02
 - rdma-core>=48
 - requests
 - requests-cache=1.1
@@ -102,14 +106,14 @@ dependencies:
 - sentence-transformers
 - sphinx
 - sphinx_rtd_theme
-- sqlalchemy
+- sqlalchemy<2.0
 - sysroot_linux-64=2.17
 - tqdm=4
 - transformers=4.36.2
 - tritonclient=2.34
 - typing_utils=0.1
-- ucx=1.15
 - versioneer
+- versioneer-518
 - watchdog=3.0
 - websockets
 - yapf=0.40.1
