--- a/conda/environments/examples_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/examples_cuda-121_arch-x86_64.yaml
@@ -14,21 +14,23 @@ dependencies:
 - arxiv=1.4
 - beautifulsoup4
 - boto3
-- click >=8
+- click>=8
+- cudf=24.02
 - cuml=24.02.*
-- dask=2023.12.1
+- cupy
 - datacompy=0.10
 - dill=0.3.7
-- distributed=2023.12.1
+- docker-py=5.0
 - elasticsearch==8.9.0
-- feedparser=6.0.10
-- grpcio-status==1.59
+- feedparser=6.0
+- grpcio-status=1.59
 - grpcio=1.59
 - huggingface_hub=0.20.2
 - jsonpatch>=1.33
 - kfp
 - libwebp=1.3.2
 - mlflow>=2.10.0,<3
+- mrc=24.06
 - networkx=2.8.8
 - newspaper3k=0.2
 - nodejs=18.*
@@ -39,6 +41,8 @@ dependencies:
 - openai=1.13
 - papermill=2.4.0
 - pip
+- pluggy=1.3
+- pyarrow=*=*_cuda
 - pydantic
 - pypdf=3.17.4
 - python-confluent-kafka>=1.9.2,<1.10.0a0
@@ -46,15 +50,17 @@ dependencies:
 - python=3.10
 - pytorch-cuda
 - pytorch=*=*cuda*
+- rapids-dask-dependency=24.02
 - requests
 - requests-cache=1.1
 - requests-toolbelt
 - s3fs=2023.12.2
 - scikit-learn=1.3.2
 - sentence-transformers
-- sqlalchemy
+- sqlalchemy<2.0
 - tqdm=4
 - transformers=4.36.2
+- tritonclient=2.34
 - typing_utils=0.1
 - watchdog=3.0
 - websockets
